--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,7 +24,7 @@ $fontSize: rem(18); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
-
+$mainDarkColor: #141414; // Основной цвет (меню - BG)
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
 // Минимальная ширина страницы
