--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@ $fontSize: rem(18); // где 14(px) - размер шрифта по умолч
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
 $mainDarkColor: #141414; // Основной цвет (меню - BG)
+$mainOrangeColor: #E8AA31; // 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
 // Минимальная ширина страницы
@@ -61,6 +62,7 @@ $responsiveType: 1;
 
 body {
 	font-weight: 500;
+	height: rem(4000);
 	// Скролл заблокирован
 	.lock & {
 		overflow: hidden;
