--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -16,19 +16,27 @@
 		display: flex;
 		align-items: center;
 		gap: rem(20);
+		@media (max-width:$tablet){
+			gap: rem(30)	;
+		}
 	}
 	&__menu {
 		flex: 1 1 auto;
 	}
 	&__user {
+		position: relative;
+		z-index: 5;
 		display: flex;
 		flex-direction: row;
 		font-weight: 600;
 		font-size: rem(18);
 		line-height: math.div(22, 18);
 		&:before{
-			font-size: rem(28);		
+			font-size: rem(30);		
 			margin-right: rem(15);	
+			@media (max-width:$tablet){
+				margin: 0;
+			}
 		}
 		@media (any-hover: hover){
 			&:hover{
@@ -41,10 +49,106 @@
 				}
 			}
 		}
+		@media (max-width:$tablet){
+			span {
+				display: none;
+			}
+		}
+	}
+}
+.menu-top-header {
+	&__list {
+		display: flex;
+		flex-direction: row;
+		row-gap: rem(5);
+		@include adaptiveValue("column-gap", 60, 30);
+		flex-wrap: wrap;
+		transition: .5s all;
+		@media (max-width:$tablet){
+			row-gap: rem(30);
+			flex-direction: column;
+		}
+	}
+	&__item {
+		@media (max-width:$tablet){
+			position: relative;
+			&::before{
+				content:'';
+				position: absolute;
+				bottom: rem(-15);
+				width: 100%;
+				height: rem(1);
+				background: #3D3D3D;
+			}
+		}
+		//скриваем пункт меню на экранах больше 991.98px
+		&_catalog {
+			@media (min-width:$tablet){
+				display: none; 
+			}
+		}
+	}
+	&__link {
+		font-size: rem(16);
+		@media (any-hover: hover){
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+		&_catalog {
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+			&::before{
+				transform: rotate(-90deg);
+				font-size: rem(12);
+				color: #ECF1F2;
+			}
+		}
+		@media (max-width:$tablet){
+			@include adaptiveValue("font-size", 28, 22);
+		}
+	}
+	@media (max-width:$tablet){
+		display: none;
 	}
 }
 .menu {
 	&__body {
+		@media (max-width:$tablet){
+			position: fixed;
+			width: 100%;
+			left: -100%;
+			top: 0;
+			height: 100%;
+			overflow: auto;
+			background-color: $mainDarkColor;
+			padding: rem(80) rem(15);
+			z-index: 4;
+			transition: .5s all;
+			&::before{
+				content:'';
+				position: fixed;
+				width: 100%;
+				height: rem(70);
+				left: -100%;
+				top: 0;
+				background-color: $mainDarkColor;
+			}
+			.menu-open & {
+				left: 0;
+				&::before{
+					content:'';
+					left: 0;
+					z-index: 5;
+				}
+			}
+		}
+	}
+	@media (max-width:$tablet){
+		flex: 1 1 auto;
+		display: flex;
+		justify-content: flex-end;
 	}
 	&__list {
 		display: flex;
@@ -70,8 +174,14 @@
 	background-color: #ECF1F2;
 	&__container {
 		display: flex;
-		min-height: 70px;
+		min-height: rem(70);
 		align-items: center;
+		@media (max-width:$tablet){
+			justify-content: space-between;
+		}
+		@media (max-width:$mobile){
+			 justify-content: center; 
+		}
 	}
 	// Получаем лого через (icons font) @ex 
 	&__logo {
@@ -79,21 +189,28 @@
 		@extend ._icon-logo;
 		font-size: rem(42);
 		color: $mainDarkColor;
+		@media (max-width:$mobile){
+			 font-size: rem(55); 
+		}
 	}
 	&__search {
 		flex: 1 1 auto; // прижимаеи actions к правому краю контейнера
+		@media (max-width: em(650)){
+			justify-content: center;
+			display: flex;
+		}
 	}
 }
 .search-header {
-	@include adaptiveValue("margin-left", 158, 0, 1600, 1250, 1);
+	@include adaptiveValue("margin-left", 158, 40, 1, 1600, 1250);
 	background: url(../img/icons/search.svg) 4% 54% no-repeat;
 	background-size: rem(18);
-	width: 320px;
 	display: flex;
+	width: rem(377);
 	align-items: center;
 	justify-content: center;
-	transition: 0.5s all;
-	@media (max-width: em(1260)){
+	transition: 0.3s all;
+	@media (max-width: em(1300)){
 		  margin-left: rem(20);
 	}
 	&__input {
@@ -113,13 +230,20 @@
 		outline: none !important;
 		border: 1px solid rgba(4, 4, 4, 0.5);
 	}
+	@media (max-width: em(650)){
+		  background-color: #fff;
+		  margin: 0;
+	}
 }
 // Actions =========================
 .actions-header {
 	display: flex;
 	align-items: center;
-	@include adaptiveValue("gap", 30, 12);
+	@include adaptiveValue("column-gap", 30, 10, 1, 1600, 920);
 	@include adaptiveValue("margin-left", 20, 10);
+	@media (max-width: em(767)){
+		display: none;
+    }
 	&__locarion {
 		display: flex;
 		align-items: center;
@@ -132,15 +256,17 @@
 			margin-right: rem(10);
 		}
 	}
-	&__phones {
-	}
 	&__favorite {
 		font-size: rem(26);
+		position: relative;
+		z-index: 5;
 	}
 	&__cart { 	
 	}
 }
 ._icon-favorite_heart {
+	position: relative;
+	z-index: 5;
 	@media (any-hover: hover){
 		transition: .5s all;
 		width: 35px;
@@ -156,6 +282,8 @@
 }
 
 .phones-header {
+	position: relative;
+	z-index: 5;
 	&__item {
 		position: relative;
 	}
@@ -164,7 +292,26 @@
 		line-height: math.div( 22, 18);
 		color: #000000;
 		white-space: nowrap;
-		transition: .5s all;
+		transition: .3s all;
+		&::before {
+			@extend %ic;
+			@extend ._icon-footer-phone;
+			display: none;
+		}
+		@media (max-width:$mobileSmall){
+			&::before {
+				display: block;
+				font-size: rem(27);
+			}
+			span {
+				display: none;
+			}
+		}
+		@media (max-width:$tablet){
+			color:#ECF1F2;
+			font-size: rem(20);
+			font-weight: 700;
+		}
 		@media (any-hover: hover){
 			&:hover{
 				color:$mainOrangeColor;
@@ -175,6 +322,9 @@
 		margin-left: rem(10);
 		color: $mainOrangeColor;
 		transition: .3s ease;
+		@media (max-width:$tablet){
+			 display: none; 
+		}
 		&._spoller-active {
 			transform: rotate(180deg);
 		}
@@ -205,6 +355,9 @@
 		color: $mainOrangeColor;
 		margin-top: rem(5);
 		cursor: pointer;
+		@media (max-width:$tablet){
+			display: none;
+		}
 		@media (any-hover: hover){
 			&:hover{
 				@media (any-hover: hover){
@@ -228,6 +381,7 @@
 		width: 31px;
         height: 31px;
 		position: relative;
+		margin-top: rem(7);
 		span {
 			position: absolute;
 			top: -20%;
@@ -243,8 +397,19 @@
 			align-items: center;
 			justify-content: center;
 		}
+		@media (max-width:$tablet){
+			position: relative;
+			z-index: 5;
+			background-image: url(../img/icons/cart_wight.svg);
+			background-position: center; /* Center the image */
+			background-repeat: no-repeat; /* Do not repeat the image */
+			background-size: cover; 
+		}
 	}
 	&__body {
+		@media (max-width: em(1250)){
+			  display: none;
+		}
 	}
 	&__summ {
 		font-weight: 500;
@@ -271,9 +436,7 @@
 		}
 	}
 }
-.cart-header__icon {
-	margin-top: rem(7);
-}
+
 //HEADER Catalog  =========================
 
 .catalog-header {
@@ -284,12 +447,40 @@
 	}
 	&__menu {
 	}
+	@media (max-width: em(650)){
+		padding: rem(20) rem(10);
+    }
 }
 .menu-catalog {
+	position: relative;
+	&__back {
+		display: none;
+		@media (max-width:$tablet){
+			display: flex;
+		flex-direction: reverse;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: rem(15);
+		gap: rem(30);
+		position: absolute;
+		left:rem(22);
+		top: rem(32);
+			&::before{
+				content:'';
+				background: url(../img/icons/icon-back.svg) center / cover no-repeat;
+				width: 20px;
+				height: 12px;
+			}
+		}
+	}
 	&__list {
 		display: flex;
 		gap: rem(10);
 		justify-content: space-between;
+		@media (max-width:$tablet){
+			flex-direction: column;
+			@include adaptiveValue("font-size", 28, 22);
+		}
 	}
 	&__item {
 	}
@@ -297,10 +488,13 @@
 		min-height: rem(70);
 		padding: rem(0) rem(10);
 		display: flex;
-		align-items: center;
-		justify-content: center;
 		position: relative;
 		transition: .5s all;
+		@media (min-width:$tablet){
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+		}
 		// Ogange divider
 		&:after{
 			content:'';
@@ -312,7 +506,7 @@
 			left: rem(10);
 			width: calc(100% - rem(20));
 			background-color: $mainOrangeColor;
-			transition: .5s all ;
+			transition: .3s all ;
 		}
 		@media (any-hover: hover){
 			&:hover{
@@ -337,12 +531,47 @@
 		top: 100%;
 		background-color: $mainDarkColor;
 	}
+	@media (max-width:$tablet){
+		position: fixed;
+		left: -100%;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+		background-color: $mainDarkColor;
+		padding: rem(80) rem(15);
+		transition: .3s all;
+		.catalog-open & {
+			left: 0;
+			z-index: 6;
+		}
+	}
 }
 .sub-menu-catalog {
+	&__back {
+		display: none;
+		@media (max-width:$tablet){
+		display: flex;
+		flex-direction: reverse;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: rem(15);
+		gap: rem(30);
+		position: absolute;
+		left:rem(22);
+		top: rem(32);
+			&::before{
+				content:'';
+				background: url(../img/icons/icon-back.svg) center / cover no-repeat;
+				width: 20px;
+				height: 12px;
+			}
+		}
+	}
 	&__block {
 		padding: rem(0) rem(10);
 		display: none;
- 		transition: .5s all ;
+ 		transition: .3s all ;
 		&._sub-menu-open {
 			display: flex;
 			flex-wrap: wrap;
@@ -409,18 +638,16 @@
 	}
 }
 
-
-
 //====================================================================================================
 //Burger
 .icon-menu {
 	display: none;
-	@media (max-width: $mobile) {
+	@media (max-width: $tablet) {
 		display: block;
 		position: relative;
-		flex: 0 0 30px; // задаем ширину бургера что бы его не плющело (width - не подходит)
-		height: rem(18);
-		z-index: 5;
+		width: 40px; // задаем ширину бургера что бы его не плющело (width - не подходит)
+		height: rem(23);
+		z-index: 10;
 		@media (any-hover: none) {
 			cursor: default;
 		}
