--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,1 +1,13 @@
 // Заголовки, общие БЄМ блоки и проче...
+.button {
+    width: 228px;
+    height: 50px;
+    background: $mainOrangeColor;
+    box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
+    border-radius: 3px;
+    font-weight: 600;
+    font-size: rem(20);
+    line-height: math.div( 46, 20);
+    color: #FFFFFF;
+    padding: rem(15) rem(52);
+}
