--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -3,12 +3,19 @@
 
 .button {
 	display: inline-flex;
-	padding: 0px 0px;
+	align-items: center;
+	padding: rem(15) rem(52);
+	width: 228px;
+    height: 50px;
+	background: $mainOrangeColor;
+	box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
+	border-radius: 3px;
+    font-weight: 600;
+    font-size: rem(20);
+    line-height: math.div( 46, 20);
+    color: #FFFFFF;
 	@media (any-hover: hover) {
 		&:hover {
 		}
-	}
-	&._fw {
-		width: 100%;
 	}
 }
