--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,24 +1,27 @@
 // Заголовки, общие БЄМ блоки и проче...
 
-// Item Catalog Card ==================================================
+// ==================================================    Item Catalog Card       ==================================================
 .catalog-cards {
     &__item {
-        max-width: rem(509);
+        max-width: rem(450);
         min-height: rem(293);
         background: #FFFFFF;
-        width: 100%;
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
-        
+        width: 100%;
     }
 }
+
 .item-card {
     padding: rem(30) rem(30) rem(60) rem(30);
     position: relative;
+    overflow: hidden;
     @media (max-width:$mobile){
-         display: flex;
-         flex-direction: column;
-         justify-content: center;
-         align-items: center; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; 
+        min-width: 100%; 
+
     }
     &__title {
         font-weight: 600;
@@ -90,4 +93,172 @@
        }
     }
 }
+
 //  ==================================================   Item Catalog Card END   ==================================================
+
+
+//====================================================    Product Card    =========================================================
+.product-slide {
+    &__item {
+        display: flex;
+        flex-direction: column;
+        max-width: rem(375);
+        min-height: 600px;
+        background: #FEFEFE;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+        padding: rem(20);
+        gap: rem(20);
+        width: 100%;
+        transition: box-shadow 0.3s ease 0s;
+        @media (any-hover: hover){
+            &:hover{
+                box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.3);
+            }
+        }
+    }
+    &__button {
+        width: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease 0s;
+        cursor: pointer;
+        &::after{
+            content:'';
+            position: absolute;
+            display: block;
+            background: url(../img/icons/cart.png) no-repeat center center / cover;
+            top: 50%;
+            transform: translateY(-50%);
+            right: rem(40);
+            width: rem(20);
+            height: rem(20);
+            color:#FEFEFE;
+            opacity: 0;
+            transition: all 0.3s ease 0s;
+        }
+        @media (any-hover: hover){
+            &:hover{
+                text-indent: -20px;   
+                &::after{
+                    content:'';
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
+
+.item-product {
+    &__image {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.content-product-slide {
+    &__title {
+        font-weight: 600;
+        font-size: rem(20);
+        line-height: math.div( 34, 20);
+        color: #141414;
+    }
+
+    &__descr {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        font-weight: 600;
+        font-size: rem(16);
+        line-height: math.div( 34, 16);
+        color: #ABABAB;
+        row-gap: rem(8);
+        padding-bottom: rem(20);
+        border-bottom: 1px solid rgba(20, 20, 20, 0.5);
+        margin-bottom: rem(20);
+        justify-items: flex-start;
+        align-items: center;
+    }
+
+    &__prises {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__price {
+        font-weight: 600;
+        font-size: rem(20);
+        line-height: math.div( 34, 20);
+        color: #141414;
+        &::after{
+            content:' UAH';
+        }
+    }
+
+    &__icons {
+        display: flex;
+        align-items: center;
+        gap: rem(10);
+    }
+
+    &__icon {
+        font-size: rem(24);
+        &-1 {
+            @media (any-hover: hover){
+                width: 35px;
+                height: 35px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: all 0.3s ease 0s;
+                &:hover{
+                    background-color: $mainOrangeColor;
+                    border-radius: rem(4);
+                }
+            }
+        }
+        &-2 {
+            color: $mainOrangeColor;
+        }
+    }
+}
+
+//  STARS     ====================
+:root {
+    --star-size: 22px;
+    --star-color: #ABABAB;
+    --star-background: #E8AA31;
+  }
+
+.product-descr {
+    &__stars {
+        --percent: calc(var(--rating) / 5 * 100%);
+        display: inline-block;
+        font-size: var(--star-size);
+        font-family: Times; // make sure ★ appears correctly
+        line-height: 1;
+            &::before {
+            content: '★★★★★';
+            letter-spacing: 3px;
+            background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+    }
+  }
+
+//  STARS END    ====================
+
+.product-descr {
+    &__material {
+        justify-self: end;
+        @include adaptiveValue("font-size", 16, 10);
+    }
+    &__reviews {
+        justify-self: end;
+    }
+}
+//====================================================    Product Card  END   =========================================================
+
