--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,4 +1,4 @@
-//====================================     MAIN - BLOCK    ==================================================
+//================================================     MAIN - BLOCK    ==================================================
 .page {
     &__main-block {
 
@@ -28,6 +28,7 @@
         padding-left: rem(15);
     }
 }
+
 // погинация - фракция ( счетчик слайдов и панель )============
 .swiper-pagination {
     display: flex;
@@ -79,6 +80,7 @@
     }
    
 } 
+
 // 01/04 > ======
 .swipper-controls{
     display: flex;
@@ -176,9 +178,9 @@
     }
     &__tips {
         z-index: 5;
-        @media (max-width: em(424.98)){
+        @media (max-width:$tablet){
             display: none;
-      }
+        }
     }
     &__tip {
         width: rem(20);
@@ -267,13 +269,15 @@
     }
 }
 
-//==================================================  MAIN - BLOCK END  ==========================================================================
+//=====================================================  MAIN - BLOCK END  ==========================================================================
 
-//========================================================================================================================================================
 
+//=====================================================  Catalog-Cards  ===================================================================================
 .catalog-cards {
-    padding: rem(130) rem(0) rem(120) rem(0);
+    background: #E5E5E5;
     &__container {
+        @include adaptiveValue("padding-top", 130, 40);
+        @include adaptiveValue("padding-bottom", 120, 40);
     }
 
     &__wrapper {
@@ -287,3 +291,159 @@
         }
     }
 }
+
+//=====================================================  Catalog-Cards End   =============================================================================
+
+
+//=====================================================  Product-Slider   =============================================================================
+
+.product-slider {   
+    background: #E5E5E5;
+    &__container {
+        @include adaptiveValue("padding-top", 80, 30);
+        @include adaptiveValue("padding-bottom", 164, 30);
+       
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        @include adaptiveValue("padding-bottom", 60, 30);
+        @media (max-width: em(550)){
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+        }
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: rem(30);
+        line-height: math.div( 46, 30);
+        letter-spacing: 0.05em;
+        color: #141414;
+    }
+
+    &__more {
+        font-weight: 600;
+        font-size: rem(18);
+        line-height: math.div( 46, 18);
+        letter-spacing: 0.05em;
+        color: rgba(20, 20, 20, 0.58);
+        position: relative;
+        padding-right: rem(30);
+        transition: all 0.3s ease 0s;
+        &::before{
+            transform: rotate(90deg) translateY(-50%);
+            font-size: rem(8);
+            color: $mainOrangeColor;
+            position: absolute;
+            right: 0;
+            top: 46%;
+            transition: all 0.3s ease 0s;
+        }
+        @media (any-hover: hover){
+            &:hover{
+                color: $mainOrangeColor;
+                &::before{
+                    font-size: rem(14);
+                    top: 40%;
+                }
+            }
+        }
+    }
+    &__controls {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.product-slide {
+    &__body {
+        display: flex;
+        gap: rem(10);
+        justify-content: center;
+        align-items: center;
+    }
+}
+//=====================================================  Product-Slider END   =============================================================================
+
+
+//========================================================================================================================================================
+
+.new-product-slider {
+    background: url(img/new-products-bg.jpg) center / cover no-repeat;
+    padding: rem(40) 0px;
+    &__container {
+        display: grid;
+        grid-template-columns: 1fr percent(1180, 1590);
+        column-gap: rem(33);
+        @media (max-width: em(1100)){
+              grid-template-columns: 1fr;
+        }
+    }
+    &__description {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        max-width: rem(336);
+        @media (max-width: em(1100)){
+            max-width: 100%;
+            padding-bottom: rem(20);
+        }
+    }
+   
+    &__title {
+        font-weight: 700;
+        font-size: rem(30);
+        line-height: math.div(46 , 30);
+        letter-spacing: 0.05em;
+        color: #FFFFFF;
+        margin-bottom: rem(30);
+    }
+
+    &__text {
+        font-weight: 500;
+        font-size: rem(18);
+        line-height: math.div( 27, 18);
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.7);
+        @include adaptiveValue("margin-bottom", 60, 20);
+    }
+
+    &__more {
+        font-size: rem(20);
+        line-height: math.div( 46, 20);
+        letter-spacing: 0.05em;
+        color: #E8AA31;
+        position: relative;
+        padding-right: rem(30);
+        transition: all 0.3s ease 0s;
+        &::before{
+            transform: rotate(90deg) translateY(-50%);
+            font-size: rem(8);
+            color: $mainOrangeColor;
+            position: absolute;
+            right: 0;
+            top: 46%;
+            transition: all 0.3s ease 0s;
+        }
+        @media (any-hover: hover){
+            &:hover{
+                text-decoration: underline;
+                &::before{
+                    font-size: rem(14);
+                    top: 40%;
+                }
+            }
+        }
+    }
+    &__controls {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+
