--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -262,3 +262,39 @@
 }
 //====================================================    Product Card  END   =========================================================
 
+.title-log {
+    font-weight: 700;
+    font-size: rem(30);
+    line-height: math.div( 46, 30);
+    letter-spacing: 0.05em;
+    color: #141414;
+}
+
+.title-log-link {
+    font-weight: 600;
+    font-size: rem(18);
+    line-height: math.div( 46, 18);
+    letter-spacing: 0.05em;
+    color: rgba(20, 20, 20, 0.58);
+    position: relative;
+    padding-right: rem(30);
+    transition: all 0.3s ease 0s;
+    &::before{
+        transform: rotate(90deg) translateY(-50%);
+        font-size: rem(8);
+        color: $mainOrangeColor;
+        position: absolute;
+        right: 0;
+        top: 46%;
+        transition: all 0.3s ease 0s;
+    }
+    @media (any-hover: hover){
+        &:hover{
+            color: $mainOrangeColor;
+            &::before{
+                font-size: rem(14);
+                top: 40%;
+            }
+        }
+    }
+}
