--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -318,42 +318,6 @@
         }
     }
 
-    &__title {
-        font-weight: 700;
-        font-size: rem(30);
-        line-height: math.div( 46, 30);
-        letter-spacing: 0.05em;
-        color: #141414;
-    }
-
-    &__more {
-        font-weight: 600;
-        font-size: rem(18);
-        line-height: math.div( 46, 18);
-        letter-spacing: 0.05em;
-        color: rgba(20, 20, 20, 0.58);
-        position: relative;
-        padding-right: rem(30);
-        transition: all 0.3s ease 0s;
-        &::before{
-            transform: rotate(90deg) translateY(-50%);
-            font-size: rem(8);
-            color: $mainOrangeColor;
-            position: absolute;
-            right: 0;
-            top: 46%;
-            transition: all 0.3s ease 0s;
-        }
-        @media (any-hover: hover){
-            &:hover{
-                color: $mainOrangeColor;
-                &::before{
-                    font-size: rem(14);
-                    top: 40%;
-                }
-            }
-        }
-    }
     &__controls {
         display: flex;
         justify-content: center;
@@ -371,7 +335,7 @@
 //=====================================================  Product-Slider END   =============================================================================
 
 
-//========================================================================================================================================================
+//=====================================================  NEW Product-Slider   ==========================================================================
 
 .new-product-slider {
     background: url(img/new-products-bg.jpg) center / cover no-repeat;
@@ -443,6 +407,208 @@
     &__controls {
         display: flex;
         justify-content: center;
+    }
+}
+//===================================================    NEW Product-Slidr   END  ========================================================================================
+
+
+//====================================================      Articles      ==========================================================================
+
+.articles {
+    @include adaptiveValue("padding-top", 120, 30);
+    @include adaptiveValue("padding-bottom", 120, 30);
+    background: #E5E5E5;
+    &__title {
+        font-weight: 700;
+        font-size: rem(30);
+        line-height: math.div( 46, 30);
+        letter-spacing: 0.05em;
+        color: #141414;
+        margin-bottom: rem(16);
+    }
+    &__body {
+        display: grid;
+        gap: rem(20);
+        grid-template-columns: repeat(auto-fit, minmax(rem(300), 1fr));
+    }
+}
+.item-article {
+    display: flex;
+    flex-direction: column;
+    background: #FEFEFE;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);    
+    min-height: 100%;
+    overflow: hidden;
+    &__image-ibg {
+        overflow: hidden;
+        padding-bottom: percent(200, 376);
+        transition: all 0.3s ease 0s;
+        @media (any-hover: hover){
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+    }
+
+    &__descr {
+        flex: 1 1 auto;
+        padding: rem(20);
+    }
+    &__title {
+        font-weight: 600;
+        font-size: rem(20);
+        line-height: math.div( 34, 20);
+        color: #141414;
+        margin-bottom: rem(8);
+        transition: all 0.3s ease 0s;
+        @media (any-hover: hover){
+            &:hover{
+                color: $mainOrangeColor;
+            }
+        }
+    }
+
+    &__date {
+        font-weight: 500;
+        font-size: rem(16);
+        line-height: math.div( 34, 16);
+        color: #ABABAB;
+    }
+}
+//=====================================================     Articles END   ==================================================================================================
+
+
+//=====================================================     Flashlight    ==================================================================================================
+.flashlight {
+    @include adaptiveValue("padding-bottom", 120, 60);
+    background: #E5E5E5;
+    &__container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: rem(47);
+        @media (max-width:$mobile){
+            grid-template-columns: 1fr;
+            gap: rem(20);
+        }
+        
+    }
+}
+
+.flashlight-card {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    min-height: rem(293);
+    &__body {
+        display: flex;
+        position: relative;
+        @media (max-width:$mobile){
+             justify-content: center;
+             align-items: center; 
+        }
+    }
+
+    &__descr {
+        flex: 0 1 50%;
+        padding: rem(20);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between ;
+        gap: rem(48);
+        z-index: 3;
+    }
+
+    &__title {
+        font-weight: 600;
+        font-size: rem(20);
+        line-height: math.div( 34, 24);
+        color: #000000;
+        position: relative;
+        &::after {
+            content:'';
+            position: absolute;
+            width: rem(68);
+            height: 0px;
+            bottom: -15px;
+            display: block;
+            border: 1px solid $mainOrangeColor;
+        }
+    }
+
+    &__text {
+        font-weight: 500;
+        font-size: rem(18);
+        line-height: math.div( 27, 18);
+        color: #000000;
+    }
+
+    &__image {
+        position: absolute;
+        right: 0;
+        @media (max-width: em(1200)){
+              opacity: 0.3;
+        }
+    }
+    &__button {
+        transition: all 0.3s ease 0s;
+        @media (any-hover: hover){
+            &:hover{
+                text-indent: -20px;
+            }
+        }
+    }
+}
+.flashlight-catacol {
+    background: #E5E5E5;
+    @include adaptiveValue("padding-bottom", 120, 30);
+    &__container {
+    }
+
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: rem(62);
+    }
+    &__body {
+        display: grid;
+        gap: rem(20);
+        grid-template-columns: repeat(auto-fit, minmax(rem(300), 1fr));
+        justify-items: center;
+    }
+}
+
+//=====================================================    Flashlight   END   ===========================================================================
+
+
+//=====================================================     Footer descr TOP   ==============================================================================
+
+.footer-descr {
+    background: url(img/bg-footer-top.jpg) center / cover no-repeat;
+    &__container {
+        padding-top: rem(60);
+        padding-bottom: rem(60);
+        display: flex;
+        flex-direction: column;
+        gap: rem(30);
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: rem(30);
+        line-height: math.div( 46, 30);
+        letter-spacing: 0.05em;
+        color: $mainOrangeColor;
+        text-align: center;
+    }
+
+    &__text {
+        font-weight: 500;
+        font-size: rem(18);
+        line-height: math.div( 27, 18);
+        letter-spacing: 0.03em;
+        color: #FFFFFF;
     }
 }
 
